Added Projects and Home Button

--- a/projects/project-3/index.html
+++ b/projects/project-3/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    Hello World 
+    Project 3
+    <a href="../../home.html">Home<a></a>
 </body>
 </html>
